--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "create-indexes": "node scripts/createIndexes.js",
+    "import-players": "node scripts/importPlayers.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -13,7 +15,8 @@
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.5.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
