--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,4 @@
 PORT=4000
-MONGO_URI=mongodb+srv://cricketvickey:dPy3b2tzS7J7mJNS@cluster0.ujttv.mongodb.net/NCL2?retryWrites=true&w=majority&appName=Cluster0
-CORS_ORIGIN=https://112c94d4a91d.ngrok-free.app
+MONGO_URI=mongodb+srv://cricketvickey:dPy3b2tzS7J7mJNS@cluster0.pngzbu5.mongodb.net/NCL2?retryWrites=true&w=majority&appName=Cluster0
+CORS_ORIGIN=http://localhost:5173/
 ADMIN_TOKEN=DarshanKS1
-VITE_API_URL=https://112c94d4a91d.ngrok-free.app
