--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,16 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "create-indexes": "node scripts/createIndexes.js",
-    "import-players": "node scripts/importPlayers.js"
+    "import-players": "node scripts/importPlayers.js",
+    "create-admin": "node scripts/createAdminUser.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "socket.io": "^4.7.5",
     "xlsx": "^0.18.5"
